--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="caat_navbar">
 	<div class="row remove_row_margin align-items-center " style="height: 100%">
-		<div class="col-sm-2" style="padding-left: 40px">
+		<div class="col-sm-2 nav_logo">
 			<a  href="index">
     			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
   			</a>
@@ -53,7 +53,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<p>
-						CAAT Projects is a non-profit NGO, established in The Hague, Netherlands. CAAT stands for a more colorful world where arts, creativity and non-formal education enables respect & promotion of human rights.
+						CAAT Projects is a non-profit NGO, established in Amsterdam, Netherlands. CAAT stands for a more colorful world where arts, creativity and non-formal education enables respect & promotion of human rights.
 					</p>
 				</div>
 			</div>	
@@ -110,7 +110,7 @@
 				</div>
 				<div class="home_text">
 					<p>
-						CAAT Projects has an active team of 2 employees, a Project Coordinator and an Administrator. A board of 3 members meets 3 times per year and strategy sessions are organized throughout the year. 
+						CAAT Projects has an active team of three menbers and many volunteers/freelancers. A board of 3 members meets 3 times per year and strategy sessions are organized throughout the year. 
 					</p>
 				</div>
 				<div class="home_link">
@@ -131,7 +131,7 @@
 					<div class="col-sm-4"></div>
 					<div class="col-sm-4">
 						<div class="home_title">
-							<p>Non-formal education and participatory arts projects</p>
+							<p>Human rights education and participatory arts projects</p>
 						</div>						
 					</div>
 					<div class="col-sm-4"></div>
