--- a/who-we-are.html
+++ b/who-we-are.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="caat_navbar">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
-			<div class="col-sm-2" style="padding-left: 40px">
+			<div class="col-sm-2 nav_logo">
 				<a  href="index">
 	    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
 	  			</a>
@@ -71,19 +71,65 @@
                         <p class="who_name">Andreia</p>
                     </div>
                 </div>
+                
                 <div class="row">
                     <div class="col-sm-12">
-                        <p class="who_role">Project manager and founder</p>
+                        <p class="who_text">
+                            Human Rights educator &amp; trainer
+							With a social psychology background, Andreia is a participatory arts practitioner, hoping for
+							a grassroot revolution for a world based on equality and human rights for all.
+							The constant process of developing, exploring new ways to engage with others, to grow
+							together and rebuild a different system based on social justice are important things to me.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+		<div class="row align-items-center">
+            <div class="col-sm-2"></div>
+            <div class="col-3">
+                <img class="img-fluid" src="assets/images/who2.png">
+            </div>
+            <div class="col-sm-5">
+                <div class="row ">
+                    <div class="col-sm-12">
+                        <p class="who_name">Marik de Koning</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="who_text">
-                            Andreia – with 20 years’ experience in the field and with the privilege of learning with extraordinary 
-                            groups and professionals. Now is time to pass these competences to others, by being a trainer, an activist 
-                            and a coordinator of projects. Her social-psychological background reinforces the importance of building 
-                            meaningful and last connections as well as the need to humanize our society. Andreia describes herself as 
-                            a dreamer with an high sense of pragmatism. 
+                            Trainer and teacher in the field of diversity, inclusion, and anything else that seems fun and
+							complex. Their favourite question is “why?”. At the moment they are exploring themes like
+							vulnerability and how to be radically honest. Also, they like to cuddle with their cat, and on
+							a windy day you can find them on a windsurf board.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
+		<div class="row align-items-center">
+            <div class="col-sm-2"></div>
+            <div class="col-3">
+                <img class="img-fluid" src="assets/images/who2.png">
+            </div>
+            <div class="col-sm-5">
+                <div class="row ">
+                    <div class="col-sm-12">
+                        <p class="who_name">David Limaverde</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="who_text">
+							PhD in Arts and Education (University of Barcelona) and a master in Theater Studies
+							(University of Amsterdam)
+							He has a very solid experience in physical theater, participatory/community methodologies,
+							shiatsu and butoh – a Japanese modern dance form. He has been working in different
+							cultural settings – Brazil, Kosovo, China, the Netherlands, Finland and Spain – in the field of
+							art-education and body expression.
                         </p>
                     </div>
                 </div>
@@ -103,20 +149,22 @@
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
                 <p class="who_text">
-                    It is great when you find someone that shares your views on human rights and is willing to put their 
-                    time and effort in improving what they saw as injustice. This happened many years ago with Anna and Andreia. 
-                    Others have joined and after a few actions together we decided that we would form an organization. 
-                    Thus, Anna, Andreia, Catia and Tatiana took the lead and registered Stichting CAAT Projects in January 2016. 
-                    We started our operations in The Hague, together with other organizations, like the The Hague Youth Factory 
-                    and a couple of other ones. Years later we moved our operational centre to Amsterdam, to the OT301 building. 
-                    The social actors in CAAT have changed and we now we have integrated other colleagues as Steve and Kim in our 
-                    board. We have also the pleasure of collaborating with an enthusiastic group of volunteers and friends. 
-                    Despite the changes in location and team, our core value continues the same – human rights for all. We will 
-                    keep on building an impressive record of successful projects in the Netherlands and abroad, achieving the goals 
-                    set in the organizational planning. Moreover, CAAT Projects has also been delivering on the requirements of 
-                    the EU funded projects and bringing people together from various backgrounds. 
-                    Our door keeps on being open to new opportunities, projects and collaboration either with organizations or 
-                    individuals. If you think you share similar values than us, contact us and we would brainstorm together.  
+					It is great when you find someone that shares your views on human rights and is willing to
+					put their time and effort in improving what they saw as injustice. This happened many years
+					ago with Anna, Tatiana, Catia, Andreia. Thus, we took the lead and registered Stichting CAAT
+					Projects in January 2016. We started our operations in The Hague, together with other
+					organizations, like the The Hague Youth Factory. Years later we moved our operational
+					centre to Amsterdam, to the OT301 building. The social actors in CAAT have changed and
+					we now we have integrated other colleagues as Marik, David, Marzieh and Joe in our board.
+					We have also the pleasure of collaborating with an enthusiastic group of volunteers and
+					friends. Despite the changes in location and team, our core value continues the same –
+					human rights for all. We will keep on building an impressive record of successful projects in
+					the Netherlands and abroad, achieving the goals set in the organizational planning.
+					Moreover, CAAT Projects has also been delivering on the requirements of the EU funded
+					projects and bringing people together from various backgrounds. Our door keeps on being
+					open to new opportunities, projects and collaboration either with organizations or
+					individuals. If you think you share similar values than us, contact us and we would
+					brainstorm together. 
                 </p>
             </div>
             <div class="col-sm-2"></div>
