--- a/ANBI.html
+++ b/ANBI.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="caat_navbar">
 		<div class="row remove_row_margin align-items-center " style="height: 100%">
-			<div class="col-sm-2" style="padding-left: 40px">
+			<div class="col-sm-2 nav_logo">
 				<a  href="index">
 	    			<img src="assets/images/logo.png" alt="logo" class="img-fluid">
 	  			</a>
