--- a/ANBI.html
+++ b/ANBI.html
@@ -58,7 +58,7 @@
     </div>
 
 
-	<di class="conatiner-fluid">
+	<div class="conatiner-fluid">
 		<div class="text-center anbi_title">
 			<p>Financiële verantwoordelijkheid</p>
 		</div>
@@ -197,7 +197,7 @@
 			</div>
 			<div class="col-sm-2"></div>
 		</div>
-	</di>
+	</div>
 
 	<!-- ------------------------------footer---------------------------------------->
 	<footer>
