--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,156 @@
         </div>
     </div>
 
+	<div class="container-fluid">
+		<div class="text-center projects_title">
+			<p>Ongoing projects</p>
+		</div>
+		<div class="text-center projects_text">
+			<p>These are CAAT’s active projects right now. Click on a project to read more about it.</p>
+		</div>
+	</div>
+
+	<div class="container projects_paddingTop2">
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container-fluid projects_paddingTop2">
+		<div class="text-center projects_title">
+			<p>Past projects</p>
+		</div>
+		<div class="text-center projects_text">
+			<p>These are projects that have ended.</p>
+		</div>
+	</div>
+
+	<div class="container projects_paddingTop2">
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="shadow p-3 bg-white rounded projects_box">
+					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<div class="projects_org">
+						<p>
+							together with hop and sinchi
+						</p>
+					</div>
+					<div class="projects_ititle">
+						<a href="#">
+							placeholder title
+						</a>
+					</div>
+					<div class="projects_code">
+						<p>
+							Project code: 2018-3-NL02-KA105-002224
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- ------------------------------footer---------------------------------------->
-	<footer>
+	<footer class="projects_paddingTop">
 		<div class="container-fluid home_work home_margTop4" style="text-align: center;">
 			<div class="home_title home_padTop">
 				<p>
