--- a/contact-us.html
+++ b/contact-us.html
@@ -54,69 +54,61 @@
         </div>
     </div>
 
-	<div>
-		<div class="row contact_marginTop">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-4"><p>To talk to us directly, contact Andreia.</p></div>
+	<div class="container contact_margin">
+		<div class="contact_text">
+			<div ><p>To talk to us directly, contact Andreia.</p></div>
 		</div>
-		<div class="row">
-			<div class="col-sm-2"></div>
-			<div class="col-sm-3">
-				<div>
-					<img class="img-fluid" src="assets/images/contact2.png">
-				</div>
+		<div class="contact_text2">
+			<div>
+				<div><p>Andreia Bessa</p></div>
+				<div><p>andreia@caatprojects.eu</p></div>
+				<div><p>+31 6 43582598</p></div>
 			</div>
-			<div class="col-sm-3 contact_removePadLeft">
-				<div>
-					<div><p>Andreia Bessa</p></div>
-					<div><p>andreia@caatprojects.eu</p></div>
-					<div><p>+31 6 43582598</p></div>
-				</div>
-			</div>
-			
 		</div>
 	</div>
 
 
-	<div class="container-fluid remove_padding">
+	<div class="container-fluid contact_margin2">
 		<div class="contact_img2">
 			<div class="contact_form">
 				<div class="row contact_formPadTop">
 					<div class="col-sm-1"></div>
 					<div class="col-sm-5 contact_formTitle"><p>Send a message</p></div>
 				</div>
-				<div class="row">
+				<div class="row contact_margin3">
 					<div class="col-sm-1"></div>
 					<div class="col-sm-8 contact_formSubTitle"><p>... or ask a question. We’ll get back to you as soon as possible.</p></div>
 				</div>
 				<form name="gform" id="gform" enctype="text/plain" 
 				action="https://docs.google.com/forms/d/e/1FAIpQLSdXMTJJZ1x-31HCWI9G9yuMmYr-COB_Qgz-U-JFEKVy1LPsSw/formResponse?" 
 				target="hidden_iframe" onsubmit="submitted=true;">
-					<div class="form-row contact_fromPadLeftRight">
-						<div class="form-group col-md-4">
+					<div class="form-row contact_fromPadLeftRight contact_margin4">
+						<div class="form-group col-md-4 contact_formPadRight contact_formTitle2">
 							<label for="inputEmail4">Your name*</label>
 							  <input type ="text" class="form-control" name="entry.1046799506" id="entry.1046799506">
 						</div>
-						<div class="form-group col-md-4">
+						<div class="form-group col-md-4 contact_formPadRight contact_formTitle2">
 							<label for="inputEmail4">Email address*</label>
 							  <input type="email" class="form-control" name="entry.2141447805" id="entry.2141447805">
 						</div>
-						<div class="form-group col-md-4">
+						<div class="form-group col-md-4 contact_formTitle2">
 							<label for="inputEmail4">Phone number</label>
 							  <input class="form-control" name="entry.1717448602" id="entry.1717448602">
 						</div>
 					</div>
 					<div class="form-row contact_fromPadLeftRight">
-						<div class="form-group col-md-12">
+						<div class="form-group col-md-12 contact_formTitle2">
 							<label for="inputEmail4">Your message*</label>
 							  <textarea style="resize:none" class="form-control" name="entry.1733503468" id="entry.1733503468" rows="5" maxlength="512"></textarea>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-1"></div>
-						<div class="col-sm-4"><p>The *-marked fields are required.</p></div>
-						<div class="col-sm-3"></div>
-						<div class="col-sm-3"><button value="Submit" class="btn contact_btn">Send</button></div>
+						<div class="col-sm-4 contact_formTitle2"><p>* required fields</p></div>
+						<div class="col-sm-4"></div>
+						<div class="col-sm-3 text-right contact_formPadRight2">
+							<button value="Submit" class="btn contact_btn">Send</button>
+						</div>
 					</div>
 				</form>
 				<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
