--- a/index.html
+++ b/index.html
@@ -271,10 +271,12 @@
 					Would you like to collaborate with us? Do not hesitate to contact.
 				</p>
 			</div>
-			<div class="footer_button home_padBot">
-				<button>
-					Contact us
-				</button>
+			<div class="home_padBot">
+				<a href ="contact-us" class="footer_button">
+					<button>
+						Contact us
+					</button>
+				</a>
 			</div>
 		</div>
 
@@ -288,9 +290,9 @@
 				<div class="col-sm-4"></div>
 				<div class="col-sm-4">
 					<div class="row home_margTop5">
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/fb.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/insta.png"></a></div>
-						<div class="col-sm-4"><a href="#"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
+						<div class="col-sm-4"><a href="https://facebook.com/caatprojects.eu"><img class="img-fluid" src="assets/images/fb.png"></a></div>
+						<div class="col-sm-4"><a href="https://instagram.com/caatprojects"><img class="img-fluid" src="assets/images/insta.png"></a></div>
+						<div class="col-sm-4"><a href="https://twitter.com/caatprojects"><img class="img-fluid" src="assets/images/twitter.png"></a></div>
 					</div>
 				</div>
 				<div class="col-sm-4"></div>
