--- a/who-we-are.html
+++ b/who-we-are.html
@@ -54,45 +54,46 @@
 
 
     <div class="container-fluid who_marginTop">
-        <div class="row">
+        <div class="row whoPaddingBot2">
             <div class="col-sm-5"></div>
             <div class="col-sm-4">
                 <p class="who_title">Our Team</p>
             </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center whoPaddingBot">
             <div class="col-sm-2"></div>
-            <div class="col-3">
+            <div class="col-2">
                 <img class="img-fluid" src="assets/images/who2.png">
             </div>
             <div class="col-sm-5">
-                <div class="row ">
+                <div class="row whoPaddingBot2">
                     <div class="col-sm-12">
-                        <p class="who_name">Andreia</p>
+                        <p class="who_name">Andreia Bessa</p>
                     </div>
                 </div>
                 
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="who_text">
-                            Human Rights educator &amp; trainer
-							With a social psychology background, Andreia is a participatory arts practitioner, hoping for
-							a grassroot revolution for a world based on equality and human rights for all.
-							The constant process of developing, exploring new ways to engage with others, to grow
-							together and rebuild a different system based on social justice are important things to me.
+                            Human Rights educator &amp; trainer with a social psychology background,
+							Andreia is a participatory arts practitioner, hoping for a grassroot revolution
+							for a world based on equality and human rights for all. The constant process
+							of developing, exploring new ways to engage with others, to grow together
+							and rebuild a different system based on social justice are important things to
+							her.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="col-sm-2"></div>
         </div>
-		<div class="row align-items-center">
+		<div class="row align-items-center whoPaddingBot">
             <div class="col-sm-2"></div>
-            <div class="col-3">
-                <img class="img-fluid" src="assets/images/who2.png">
+            <div class="col-2">
+                <img class="img-fluid" src="assets/images/who3.png">
             </div>
             <div class="col-sm-5">
-                <div class="row ">
+                <div class="row whoPaddingBot2">
                     <div class="col-sm-12">
                         <p class="who_name">Marik de Koning</p>
                     </div>
@@ -100,11 +101,16 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="who_text">
-                            Trainer and teacher in the field of diversity, inclusion, and anything else that seems fun and
-							complex. Their favourite question is “why?”. At the moment they are exploring themes like
-							vulnerability and how to be radically honest. Also, they like to cuddle with their cat, and on
-							a windy day you can find them on a windsurf board.
+                            Marik de Koning is a trainer and teacher in the field of diversity, inclusion,
+							and anything else that seems fun and complex. Their favourite question is
+							“why?”. At the moment they are exploring themes like vulnerability and how
+							to be radically honest. Also, they like to cuddle with their cat, and on a windy
+							day you can find them on a windsurf board.
                         </p>
+
+						<p class="who_text2">
+							Photo by Coen Dijkstra
+						</p>
                     </div>
                 </div>
             </div>
@@ -112,11 +118,11 @@
         </div>
 		<div class="row align-items-center">
             <div class="col-sm-2"></div>
-            <div class="col-3">
-                <img class="img-fluid" src="assets/images/who2.png">
+            <div class="col-2">
+                <img class="img-fluid" src="assets/images/who4.png">
             </div>
             <div class="col-sm-5">
-                <div class="row ">
+                <div class="row whoPaddingBot2">
                     <div class="col-sm-12">
                         <p class="who_name">David Limaverde</p>
                     </div>
@@ -124,12 +130,12 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="who_text">
-							PhD in Arts and Education (University of Barcelona) and a master in Theater Studies
-							(University of Amsterdam)
-							He has a very solid experience in physical theater, participatory/community methodologies,
-							shiatsu and butoh – a Japanese modern dance form. He has been working in different
-							cultural settings – Brazil, Kosovo, China, the Netherlands, Finland and Spain – in the field of
-							art-education and body expression.
+							PhD in Arts and Education (University of Barcelona) and a master in Theater
+							Studies (University of Amsterdam) He has a very solid experience in physical
+							theater, participatory/community methodologies, shiatsu and butoh – a
+							Japanese modern dance form. He has been working in different cultural
+							settings – Brazil, Kosovo, China, the Netherlands, Finland and Spain – in the
+							field of art-education and body expression.
                         </p>
                     </div>
                 </div>
@@ -148,23 +154,28 @@
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                <p class="who_text">
-					It is great when you find someone that shares your views on human rights and is willing to
-					put their time and effort in improving what they saw as injustice. This happened many years
-					ago with Anna, Tatiana, Catia, Andreia. Thus, we took the lead and registered Stichting CAAT
-					Projects in January 2016. We started our operations in The Hague, together with other
-					organizations, like the The Hague Youth Factory. Years later we moved our operational
-					centre to Amsterdam, to the OT301 building. The social actors in CAAT have changed and
-					we now we have integrated other colleagues as Marik, David, Marzieh and Joe in our board.
-					We have also the pleasure of collaborating with an enthusiastic group of volunteers and
-					friends. Despite the changes in location and team, our core value continues the same –
-					human rights for all. We will keep on building an impressive record of successful projects in
-					the Netherlands and abroad, achieving the goals set in the organizational planning.
-					Moreover, CAAT Projects has also been delivering on the requirements of the EU funded
-					projects and bringing people together from various backgrounds. Our door keeps on being
-					open to new opportunities, projects and collaboration either with organizations or
-					individuals. If you think you share similar values than us, contact us and we would
-					brainstorm together. 
+                <p class="who_histText">
+					It is great when you find someone that shares your views on human rights
+					and is willing to put their time and effort in improving what they saw as
+					injustice. This happened many years ago with Anna, Tatiana, Catia, and
+					Andreia. Thus, we took the lead and registered Stichting CAAT Projects in
+					January 2016. We started our operations in The Hague, together with other
+					organizations, like the The Hague Youth Factory. Years later we moved our
+					operational centre to Amsterdam, to the OT301 building, in a close
+					cooperation with Home of Participation.
+					The social actors in CAAT have changed and we now we have integrated
+					other colleagues as Marik and Tom, as well as David, Marzieh and Joe in our
+					board. We have also the pleasure of collaborating with an enthusiastic group
+					of volunteers and friends.
+					Despite the changes in location and team, our core value continues the same
+					– human rights for all. We will keep on building an impressive record of
+					successful projects in the Netherlands and abroad, achieving the goals set in
+					the organizational planning. Moreover, CAAT Projects has also been
+					delivering on the requirements of the EU funded projects and bringing
+					people together from various backgrounds.
+					Our door keeps on being open to new opportunities, projects and
+					collaboration either with organizations or individuals. If you think you share
+					similar values than us, contact us and we would brainstorm together.
                 </p>
             </div>
             <div class="col-sm-2"></div>
