--- a/who-we-are.html
+++ b/who-we-are.html
@@ -145,7 +145,7 @@
     </div>
 
     <div class="container-fluid who_marginTop">
-        <div class="row">
+        <div class="row who_marginBot">
             <div class="col-sm-5"></div>
             <div class="col-sm-4">
                 <p class="who_title">Our History</p>
