--- a/project_caucan.html
+++ b/project_caucan.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="icon" href="assets/images/favicon.ico">
-	<title>CAAT PROJECTS</title>
+	<title>CAAT Projects</title>
 
 	<link rel="stylesheet" href="assets/styles/style.css">
   	<link rel="stylesheet" href="assets/styles/bootstrap.css">
@@ -43,7 +43,7 @@
     <!------------------------------------------------------------------------------>
 
     <div class="container-fluid remove_padding">
-		<div class="projectstmp_img1"></div>
+		<div class="projectsCaucan_img1"></div>
     </div>
 
     <div class="container  projectstmp_paddingSides">
@@ -54,78 +54,145 @@
                 </button>
             </div>
             <div class="projectstmp_marginLeft">
-                <div class="projectstmp_title">
-                    <p>YouthLab 4 Participation</p>
+                <div class="projectsCaucan_title">
+                    <p>
+                        CAUCAN - COUNTER AND ALTERNATIVE NARRATIVES FOR HUMAN RIGHTS IN THE CAUCASUS 
+                    </p>
                 </div>
                 <div class="projectstmp_desc">
-                    <p>Long term project under the Erasmus + Programme, Key Action 1</p>
+                    <p>
+                        Long term project under the Erasmus + Programme, Key Action 2
+                    </p>
                 </div>
-                <div class="projectstmp_info">
-                    <p>Project code: KA154-YOU-B216019B </p>
-                    <p>Project co-ordinator: CAAT-Projects, The Netherlands</p>
-                    <p>In co-operation with: Stichting Formaat, The Netherlands</p>
+                <div>
+                    <p class="projectstmp_infoTitle">Project code:</p> 
+                    <p class="projectstmp_info">
+                        602502-EPP-1-2018-1-GE-EPPKA2-CBY-EP-CSF
+                    </p>
+                    <br>
+                    <p class="projectstmp_infoTitle">Project co-ordinator:</p>
+                    <p class="projectstmp_info">
+                        Project co-ordinator: Youth Association Droni, Georgia
+                    </p>
+                    <br>
+                    <p class="projectstmp_infoTitle">Partners:</p>   
+                    <p class="projectstmp_info"> 
+                        CAAT Projects, the Netherlands; Institut International des Droit de l’Homme et de
+                        la Paix, France; Be International, Czech Republic; Common Sense, Azerbaijan; Youth
+                        Initiatives Center, Armenia.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
-        <div>
-            <p>Project description</p>
+    <div class="container-fluid">
+        <div class="row projectstmp_descTitle">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8 ">
+                <p>Project description</p>
+            </div>
         </div>
-        <div>
-            <p>
-                To create spaces for social dialogue and youth participation in Rotterdam, 
-                and to motivate youth to keep on actively participating in local and national 
-                democratic activities. Project goals are the following: Encourage youth from fewer opportunities to 
-                create and manage their own social projects, increasing their competences to do so and their sense of 
-                initiative Solidification of competencies regarding the production of performances from participatory 
-                theatre that encourage fruitful dialogue Development of new tools for dialogue and policy creation, 
-                that are truly inclusive and accessible to all Increase the motivation of youth in Rotterdam to participate 
-                in events where they can discuss their ideas for new policies and delivered those to the ones with immediate 
-                power for change Develop communication skills of youth in participation in dialogue - verbal and non verbal 
-                communication, active listening, presentation skills. 
-            </p>
+        <div class="row projectstmp_desc">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <p>
+                    To create spaces for social dialogue and youth participation in Rotterdam, 
+                    and to motivate youth to keep on actively participating in local and national 
+                    democratic activities. Project goals are the following: Encourage youth from fewer opportunities to 
+                    create and manage their own social projects, increasing their competences to do so and their sense of 
+                    initiative Solidification of competencies regarding the production of performances from participatory 
+                    theatre that encourage fruitful dialogue Development of new tools for dialogue and policy creation, 
+                    that are truly inclusive and accessible to all Increase the motivation of youth in Rotterdam to participate 
+                    in events where they can discuss their ideas for new policies and delivered those to the ones with immediate 
+                    power for change Develop communication skills of youth in participation in dialogue - verbal and non verbal 
+                    communication, active listening, presentation skills. 
+                </p>
+            </div>
         </div>
     </div>
 
     <div class="container-fluid remove_padding projectstmp_img2">
-		<div class="container projectstmp_marginTop">
-            <div class="projectstmp_padding">
-                <p>Methods</p>
+		<div class="projectstmp_marginTop">
+            <div class="projectstmp_padding projectstmp_objTitle">
+                <div class="row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-4">
+                        <p>Objectives</p>
+                    </div>
+                </div>
             </div>
-            <div class="projectstmp_padding2">
+            <div class="projectstmp_padding2 projectstmp_obj">
                 <div class="row projectstmp_padding3">
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To make a situational analysis of violent radicalization threads and patterns in Europe and local realities</p>
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-5">
+                        <p>	&#x2713; &ensp; 
+                            To mainstream the principles and pedagogical basis 
+                            of human rights education and education for democratic 
+                            citizenship in youth work
+                        </p>
                     </div>
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To develop creativity, critical thinking & proactive search for alternative solutions</p>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To develop counter and alternative narratives online
+                             and offline with high level of youth participation
+
+                        </p>
                     </div>
+                    <div class="col-sm-1"></div>
                 </div>
                 <div class="row projectstmp_padding3">
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To make a situational analysis of violent radicalization threads and patterns in Europe and local realities</p>
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To make a situational analysis of violent 
+                            radicalization threads and patterns in Europe 
+                            and local realities
+                        </p>
                     </div>
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To develop creativity, critical thinking & proactive search for alternative solutions</p>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To develop creativity, critical thinking & 
+                            proactive search for alternative solutions
+                        </p>
                     </div>
+                    <div class="col-sm-1"></div>
                 </div>
                 <div class="row projectstmp_padding3">
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To make a situational analysis of violent radicalization threads and patterns in Europe and local realities</p>
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To identify the strategies to tackle hate speech, 
+                            discrimination and hostility on the local, 
+                            national and international levels
+                        </p>
                     </div>
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To develop creativity, critical thinking & proactive search for alternative solutions</p>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To share and disseminate the practices of counter 
+                            and alternative narratives through social media and conferences
+                        </p>
                     </div>
+                    <div class="col-sm-1"></div>
                 </div>
                 <div class="row projectstmp_padding3">
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To make a situational analysis of violent radicalization threads and patterns in Europe and local realities</p>
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp; 
+                            To support youth workers with methods and 
+                            techniques how to use “We CAN” manual in 
+                            order to make it more accessible for using in 
+                            youth field and to promote media literacy
+
+                        </p>
                     </div>
-                    <div class="col-sm-6">
-                        <p>	&#x2713; To develop creativity, critical thinking & proactive search for alternative solutions</p>
+                    <div class="col-sm-5">
+                        <p>	&#x2713;&ensp;
+                            To create follow-up projects in-line with 
+                            EDC/HRE Charter contributing the similar causes
+                        </p>
                     </div>
+                    <div class="col-sm-1"></div>
                 </div>
             </div>
             
