--- a/project_caucan.html
+++ b/project_caucan.html
@@ -50,7 +50,7 @@
         <div class="projectstmp_card shadow p-3 bg-white rounded">
             <div class="prjectstmp_button">
                 <button>
-                    &#8592; Projects
+                    <a style="text-decoration: none;color: inherit" href="projects">&#8592; Projects</a>
                 </button>
             </div>
             <div class="projectstmp_marginLeft">
@@ -199,6 +199,61 @@
         </div>
     </div>
 
+    <div class="container-fluid">
+        <div class="row projectstmp_descTitle2">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8 ">
+                <p>Photo Gallery</p>
+            </div>
+        </div>
+        <div class="row projectstmp_galleryPad">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8 projectstmp_photoBackGorund"></div>
+            <div class="col-sm-2"></div>
+        </div>
+        <div class="row d-flex flex-wrap align-items-center projectstmp_photo">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/caucan/gallery1.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/caucan/gallery2.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/caucan/gallery3.png"></div>
+			<div class="col-sm-2"><img class="img-fluid" src="assets/images/caucan/gallery4.png"></div>
+			<div class="col-sm-2"></div>
+		</div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row projectstmp_desc porjectstmp_text">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <p>
+                    Youth Association <a href="https://droni.org">DRONI</a> was founded in 2003, in Tbilisi, with the mission to advocate
+                    young people through development, empowerment and youth work. The main field of action
+                    of the organisation is youth work, operating in the themes of human rights education,
+                    education for democratic citizenship, outdoor experiential learning, gender equality, media
+                    education, youth participation, rural development and arts. CAAT and DRONI are long term
+                    partners, since 2016.
+                </p>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-2">
+                <img class="img-fluid" src="assets/images/logos/erasmus.png">
+            </div>
+            <div class="col-sm-4 projectstmp_text2 d-flex align-items-center">
+                <p>
+                    This project is funded by the National 
+                    Agency in The Netherlands under European 
+                    Commission’s Erasmus+ programme.
+                </p>
+            </div>
+            <div class="col-sm-3"></div>
+        </div>
+    </div>
 
 	<!-- ------------------------------footer---------------------------------------->
 	<footer class="projects_paddingTop">
