--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="icon" href="assets/images/favicon.ico">
-	<title>CAAT PROJECTS</title>
+	<title>CAAT Projects</title>
 
 	<link rel="stylesheet" href="assets/styles/style.css">
   	<link rel="stylesheet" href="assets/styles/bootstrap.css">
@@ -148,20 +148,21 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="shadow p-3 bg-white rounded projects_box">
-					<a href="#"><img src="assets/images/home6.png" class="projects_img"></a>
+					<a href="#"><img src="assets/images/caucan/projCaucan2.png" class="projects_img"></a>
 					<div class="projects_org">
 						<p>
-							together with hop and sinchi
+							Led by CAAT Projects
 						</p>
 					</div>
 					<div class="projects_ititle">
-						<a href="#">
-							placeholder title
+						<a href="project_caucan">
+							CauCan - Counter and alternative 
+							narratives for human rights in the Caucasus
 						</a>
 					</div>
 					<div class="projects_code">
 						<p>
-							Project code: 2018-3-NL02-KA105-002224
+							Project code: 602502-EPP-1-2018-1-GE-EPPKA2-CBY-EP-CSF
 						</p>
 					</div>
 				</div>
