--- a/project_caucan.html
+++ b/project_caucan.html
@@ -222,7 +222,7 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row projectstmp_desc porjectstmp_text">
+        <div class="row projectstmp_desc projectstmp_text projectstmp_padding4">
             <div class="col-sm-3"></div>
             <div class="col-sm-6">
                 <p>
@@ -239,7 +239,7 @@
     </div>
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row projectstmp_erasmus">
             <div class="col-sm-3"></div>
             <div class="col-sm-2">
                 <img class="img-fluid" src="assets/images/logos/erasmus.png">
